dark mode toggle added + field dim fix

--- a/narwhal-dashboard/src/Components/css/Field.css
+++ b/narwhal-dashboard/src/Components/css/Field.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 800px;
+    width: 55%;
     margin-bottom: 1rem;
     position: absolute;
     z-index: -1;
